# sgfxapi

./: .travis.yml  CMakeLists.txt  README.md  index.html  params.json  sgfxapi-drawutils.project  sgfxapi.project  sgfxapi.workspace  sgfxdemo.project
cmake/: CXX11.cmake
develop/sphinx-docs/html/: IndexBuffer.html  Mesh.html  MeshTexture.html  PixelBuffer.html  Shader.html  ShaderProgram.html  Texture.html  TextureSampler.html  VertexBuffer.html  VertexElement.html  enums.html  genindex.html  index.html  objects.inv  reference.html  searchindex.js
develop/sphinx-docs/html/.doctrees/: IndexBuffer.doctree  Mesh.doctree  MeshTexture.doctree  PixelBuffer.doctree  Shader.doctree  ShaderProgram.doctree  Texture.doctree  TextureSampler.doctree  VertexBuffer.doctree  VertexDeclaration.doctree  VertexElement.doctree  enums.doctree  environment.pickle  index.doctree  reference.doctree
develop/sphinx-docs/html/_sources/: Mesh.txt
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: .gitignore  IndexBuffer.rst  MeshTexture.rst  ShaderProgram.rst  Texture.rst  TextureSampler.rst  VertexBuffer.rst  VertexDeclaration.rst  VertexElement.rst  conf.py  enums.rst  index.rst  reference.rst
include/: drawutils.hpp  gfxapi.hpp  gfxdemo.hpp
include/sgfxapi/: sgfxapi-drawutils.hpp  sgfxapi-gl.hpp  sgfxapi.fwd.hpp  sgfxapi.glcommon.hpp  sgfxapi.hpp  sgfxdemo.hpp
master/sphinx-docs/html/: .buildinfo  Mesh.html  PixelBuffer.html  Shader.html  TextureSampler.html  VertexBuffer.html  VertexDeclaration.html  VertexElement.html  objects.inv  reference.html  search.html  searchindex.js
master/sphinx-docs/html/.doctrees/: IndexBuffer.doctree  Mesh.doctree  MeshTexture.doctree  PixelBuffer.doctree  Shader.doctree  ShaderProgram.doctree  Texture.doctree  TextureSampler.doctree  VertexBuffer.doctree  VertexDeclaration.doctree  VertexElement.doctree  enums.doctree  environment.pickle  index.doctree  reference.doctree
master/sphinx-docs/html/_sources/: PixelBuffer.txt  reference.txt
scripts/: copy-msys-dlls-to-Debug64.sh  download-and-build-corner-cases.sh  download-and-build-freeglut.sh  download-and-build-glfw.sh  download-and-build-glfw3.sh  download-and-build-googletest.sh  download-and-build-libs-with-no-pkg.sh  download-and-build-mathgeolib.sh  publish-sphinx-docs.sh
sphinx-docs/sphinx-docs/html/: IndexBuffer.html  MeshTexture.html  PixelBuffer.html  ShaderProgram.html  Texture.html  VertexBuffer.html  VertexDeclaration.html  VertexElement.html  genindex.html  index.html  search.html  searchindex.js
sphinx-docs/sphinx-docs/html/.doctrees/: IndexBuffer.doctree  Mesh.doctree  MeshTexture.doctree  PixelBuffer.doctree  Shader.doctree  ShaderProgram.doctree  Texture.doctree  TextureSampler.doctree  VertexBuffer.doctree  VertexDeclaration.doctree  VertexElement.doctree  environment.pickle  index.doctree  reference.doctree
sphinx-docs/sphinx-docs/html/_sources/: Shader.txt
src/: drawutils.cpp  gfxapi.cpp  gfxdemo.cpp
src/sgfxapi/: sgfxapi-drawutils.cpp  sgfxapi.cpp  sgfxdemo.cpp
